[project]
name = "supertimer"
version = "0.4.1"
description = "Contextmanager to print or log execution time of code blocks"
authors = [{ name = "Marius Helf", email = "helfsmarius@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Logging"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/mariushelf/supertimer"
Repository = "https://github.com/mariushelf/supertimer"
Documentation = "https://github.com/mariushelf/supertimer"

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pre-commit>=3.6.0",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
